--- a/shopifymobiledev/package.json
+++ b/shopifymobiledev/package.json
@@ -11,6 +11,7 @@
     "react": "16.0.0-alpha.12",
     "react-native": "0.47.1",
     "react-native-router-flux": "^4.0.0-beta.18",
+    "react-native-scrollable-tab-view": "^0.6.7",
     "react-native-vector-icons": "^4.3.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
